Compiler/tests/bad/comment2.nx
(*

val x : int = 3;

if(x)
{
    print(42);
}
else
{
    print(42/2);
}
